[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Completed Scenes/main_menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/option_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/enter_sound_real.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/black2.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 1.0
glow_blend_mode = 0

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1000.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1000.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 119.0
margin_top = 174.0
margin_right = 880.0
margin_bottom = 425.0
custom_constants/separation = 80

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 761.0
margin_bottom = 75.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
margin_right = 761.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1.2, 1.2, 1.2, 1 )
text = "LIFE IS HARD IN THE SEA"

[node name="WorldEnvironment" type="WorldEnvironment" parent="CenterContainer/VBoxContainer/CenterContainer"]
environment = SubResource( 3 )

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 761.0
margin_bottom = 251.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 303.0
margin_right = 457.0
margin_bottom = 96.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 154.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 154.0
margin_bottom = 38.0

[node name="Selector1" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 17.0
margin_bottom = 38.0
rect_min_size = Vector2( 17, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="OptionName1" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 21.0
margin_right = 154.0
margin_bottom = 38.0
rect_min_size = Vector2( 133, 0 )
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 58.0
margin_right = 154.0
margin_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 154.0
margin_bottom = 38.0

[node name="Selector2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 17.0
margin_bottom = 38.0
rect_min_size = Vector2( 17, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="OptionName2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 21.0
margin_right = 154.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "CREDITS"

[node name="OptionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EnterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="FadeIn" type="Sprite" parent="."]
position = Vector2( 500.738, 308.146 )
scale = Vector2( 0.515603, 0.509768 )
texture = ExtResource( 5 )
